added ping
